# microsoft-graph-email-sender

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py
src/auth/: graph_auth.py
src/config/: email_config.py  load_env.py
src/email/: email_payload_builder.py  email_service.py  graph_client.py
src/models/: email_model.py
src/templates/: base_email.html
src/utils/: template_loader.py
